24 June 2004 Sylvain Pion
- Various fixes required by g++ 3.4.

22 May 2004 Sylvain Pion
- SunPRO workarounds.

14 May 2004 Sylvain Pion
- Fix warning.

08 May 2004 Sylvain Pion
- Use CGAL_USE_GEOMVIEW

07 May 2004 Andreas Fabri
- Prefixed Alpha_shape_status with CGAL::  (to get rid of error msg of SunPro CC)
- Replaced std::make_pair with Alpha_{cell,vertex}_map::value_type (to get rid of error msg of SunProCC)

05 May 2004 Andreas Fabri
- Added missing std:: to find in Alpha_shape_3.h

29 April 2004 Mariette Yvinec
- removed an old test file which I had forgotten to remove from cvs

28 April 2004 Mariette Yvinec
- major changes in the implementation of Alpha_shapes_3.h
  New implementation should result in a true GENERAL  mode
  allowing null and negative alpha-values.
  Still to be done: fix the doc + improve efficiency.
  
2 April 2004 Mariette Yvinec
- fixes in Weighted_alpha_shape_euclidean_traits_3.h

25 March 2004 Radu Ursu
- changed doc to work with the current manual tools implementation

25 February 2004 MY
- Made find_alpha_solid faster even faster

25 February 2004 af
- Replaced the set/map in the traversal and the I/O with a Unique_hash_map
- Made find_alpha_solid faster 

25 fevrier 2004 MY
- added a testsuite
- changed traverse() with Andreas fix 

Version 3.34 (12 February 2004) MY
- changed Alpha_shape_cells_iterator into a Filter_iterator
- merged fixes in classify made for  bugfixrelease

Version 3.33 (09 February 2004) [rursu]
- Updated the headers of the examples files

Version 3.32 (25 January 2004) [af]
- Removed Alpha_shape_euclidean_traits_3 from doc, examples, demo and testsuite

Version 3.31 (14 janvier 04) [my]
- fixed makefile and wrapper of the doc
- add missing doc for the classify member function for edges

Version 3.30 (4 October 2003)[af]
- Removed a typo (after cleanup, grrr!##) in demos

Version 3.29 (3 October 2003)[af]
- cleanup in demos

Version 3.28 (1 October 2003)[af]
- Made Alpha_shape_euclidean_traits obsolete
