@@ -1,3 +1,6 @@
+5 July 2004 Andreas Fabri
+- Bug fix in std::ostream& operator<<(std::ostream& os,  const Alpha_shape_3<Dt>& A)
+
 24 June 2004 Sylvain Pion
 - Various fixes required by g++ 3.4.
 
